# THE-Herta-VoiceAssistant-pwd-by-RUST

./: .env.example  .gitignore  Cargo.toml  README.md  TESTING.md  config.py  doctor.py  main.py  requirements.txt
actions/: code_tools.py  self_check.py  system_actions.py  tool_layer.py  web_search.py
brain/: auto_extractor.py  long_memory.py  memory_tools.py
crates/herta-agent/src/: lib.rs
crates/herta-cli/: Cargo.toml
crates/herta-cli/src/: doctor.rs  main.rs
crates/herta-core/src/: config.rs  context.rs  error.rs  lib.rs  long_memory.rs  memory.rs  message.rs  persona.rs  tool.rs
crates/herta-llm/src/: google.rs  lib.rs  ollama.rs  openai_compat.rs
crates/herta-tools/src/: builder.rs  code_tools.rs  fs_tools.rs  git.rs  lib.rs  memory_tools.rs  registry.rs  safety.rs  system_actions.rs  web_search.rs
crates/herta-tui/: Cargo.toml
crates/herta-tui/src/: app.rs  state.rs  theme.rs  ui.rs
crates/herta-voice/: Cargo.toml
crates/herta-voice/src/: lib.rs
crates/whatcode-core/src/: config.rs  lib.rs  wakeword.rs
crates/whatcode-core/src/persona/: anis.rs  common.rs  herta.rs  mod.rs
crates/whatcode-tools/src/: builder.rs
crates/whatcode-tools/src/git/: mod.rs
crates/whatcode-voice/src/: cloud.rs  lib.rs
llm/: cerebras_client.py  google_ai_client.py  google_live_client.py
persona/: the_herta.py
tools/: herta_rvc_tts.py
tts/: edge_tts_engine.py  rvc_tts_engine.py
wakeword/: coordinator.py  matcher.py  porcupine_detector.py
