[package]
name = "herta-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "The Herta — command-line entry point"

[[bin]]
name = "herta"
path = "src/main.rs"

[dependencies]
herta-core.workspace = true
herta-llm.workspace = true
herta-tools.workspace = true
herta-agent.workspace = true
herta-tui.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
