[package]
name = "herta-voice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Voice output (TTS) for The Herta via system utilities — no native deps"

[dependencies]
herta-core.workspace = true
tracing.workspace = true
